--- a/views/search.ejs
+++ b/views/search.ejs
@@ -36,13 +36,13 @@
     <!--User-Detail-->
     <div class="User-Detail">
         <p class="Author_Name">
-            Name-Khustar
+            Name-Vansh 
         </p>
         <p class="Topic">
             Topic-Web Development
         </p>
         <p class="Date">
-            Date-02-04-2022
+            Date-01-01-2022
         </p>
     </div>
     <!--User Detail-->
